@@ -9,23 +9,40 @@ import dev.dubhe.anvilcraft.block.SmartBlockPlacerBlock;
 import dev.dubhe.anvilcraft.block.entity.SmartBlockPlacerBlockEntity;
 import dev.dubhe.anvilcraft.init.ModSoundEvents;
 import net.minecraft.client.Minecraft;
+import net.minecraft.client.color.block.BlockColors;
 import net.minecraft.client.renderer.MultiBufferSource;
 import net.minecraft.client.renderer.RenderType;
+import net.minecraft.client.renderer.block.BlockRenderDispatcher;
 import net.minecraft.client.renderer.blockentity.BlockEntityRenderer;
 import net.minecraft.client.renderer.blockentity.BlockEntityRendererProvider;
+import net.minecraft.client.renderer.entity.ItemRenderer;
+import net.minecraft.client.resources.model.BakedModel;
+import net.minecraft.client.resources.model.ModelManager;
 import net.minecraft.client.resources.model.ModelResourceLocation;
 import net.minecraft.core.BlockPos;
 import net.minecraft.core.Direction;
 import net.minecraft.sounds.SoundSource;
+import net.minecraft.util.RandomSource;
 import net.minecraft.world.item.BlockItem;
+import net.minecraft.world.item.ItemDisplayContext;
 import net.minecraft.world.item.ItemStack;
+import net.minecraft.world.level.Level;
 import net.minecraft.world.level.block.Block;
+import net.minecraft.world.level.block.Blocks;
+import net.minecraft.world.level.block.CandleBlock;
+import net.minecraft.world.level.block.HalfTransparentBlock;
 import net.minecraft.world.level.block.HorizontalDirectionalBlock;
+import net.minecraft.world.level.block.RenderShape;
+import net.minecraft.world.level.block.SeaPickleBlock;
+import net.minecraft.world.level.block.StainedGlassPaneBlock;
+import net.minecraft.world.level.block.TurtleEggBlock;
 import net.minecraft.world.level.block.state.BlockState;
+import net.minecraft.world.level.block.state.properties.BlockStateProperties;
+import net.neoforged.neoforge.client.RenderTypeHelper;
 import net.neoforged.neoforge.client.model.data.ModelData;
-import org.jetbrains.annotations.Nullable;
 
 import java.util.List;
+import javax.annotation.Nullable;
 
 public class SmartBlockPlacerRenderer implements BlockEntityRenderer<SmartBlockPlacerBlockEntity> {
     private static final ModelResourceLocation BASE_MODEL = ModelResourceLocation.standalone(
@@ -45,9 +62,18 @@ public class SmartBlockPlacerRenderer implements BlockEntityRenderer<SmartBlockP
     );
 
     private static final WorkingAnimationScheme WORKING_ANIMATION_SCHEME = new WorkingAnimationScheme();
+    private static final ItemDisplayContext HELD_ITEM_CONTEXT = ItemDisplayContext.THIRD_PERSON_RIGHT_HAND;
 
-    @SuppressWarnings("unused")
+    private final BlockRenderDispatcher blockRenderer;
+    private final ItemRenderer itemRenderer;
+    private final ModelManager modelManager;
+    private final BlockColors blockColors;
+
     public SmartBlockPlacerRenderer(BlockEntityRendererProvider.Context context) {
+        this.blockRenderer = context.getBlockRenderDispatcher();
+        this.itemRenderer = context.getItemRenderer();
+        this.modelManager = Minecraft.getInstance().getModelManager();
+        this.blockColors = Minecraft.getInstance().getBlockColors();
     }
 
     /**
@@ -65,7 +91,6 @@ public class SmartBlockPlacerRenderer implements BlockEntityRenderer<SmartBlockP
          *
          * @return float[]{baseSwingAngle, upperArmAngle, forearmAngle, clawAngle}
          */
-        @SuppressWarnings("checkstyle:VariableDeclarationUsageDistance")
         public float[] calculateArmAngles(
             BlockPos targetPos,
             BlockPos placerPos,
@@ -123,13 +148,7 @@ public class SmartBlockPlacerRenderer implements BlockEntityRenderer<SmartBlockP
         
             return new float[]{baseAngle, upperArmAngle, forearmAngle, clawAngle};
         }
-        
-        @SuppressWarnings(
-            {
-            "checkstyle:OneStatementPerLine",
-            "checkstyle:LineLength"
-            }
-        )
+
         private float[] calculateTargetAngles(
             BlockPos targetPos,
             BlockPos placerPos,
@@ -167,13 +186,14 @@ public class SmartBlockPlacerRenderer implements BlockEntityRenderer<SmartBlockP
 
                 float cosForearm = (UPPER_ARM_LENGTH * UPPER_ARM_LENGTH + FOREARM_LENGTH * FOREARM_LENGTH - clampedDist * clampedDist)
                     / (2 * UPPER_ARM_LENGTH * FOREARM_LENGTH);
-                cosForearm = Math.max(-1.0f, Math.min(1.0f, cosForearm));
+                cosForearm = Math.clamp(cosForearm, -1.0f, 1.0f);
                 float forearmAngleFromUpper = (float) Math.toDegrees(Math.acos(cosForearm));
 
                 float cosUpperArm = (clampedDist * clampedDist + UPPER_ARM_LENGTH * UPPER_ARM_LENGTH - FOREARM_LENGTH * FOREARM_LENGTH)
                     / (2 * clampedDist * UPPER_ARM_LENGTH);
-                cosUpperArm = Math.max(-1.0f, Math.min(1.0f, cosUpperArm));
-                float upperArmAngleFromTarget = (float) Math.toDegrees(Math.acos(cosUpperArm));                upperArmAngle = -(180f - upperArmAngleFromTarget - elevationAngle) * 0.6f + 20f;
+                cosUpperArm = Math.clamp(cosUpperArm, -1.0f, 1.0f);
+                float upperArmAngleFromTarget = (float) Math.toDegrees(Math.acos(cosUpperArm));
+                upperArmAngle = -(180f - upperArmAngleFromTarget - elevationAngle) * 0.6f + 20f;
                 forearmAngle = forearmAngleFromUpper * 0.8f - 10f;
             }
 
@@ -212,12 +232,16 @@ public class SmartBlockPlacerRenderer implements BlockEntityRenderer<SmartBlockP
         }
     }
 
-    @SuppressWarnings(
-        {
-            "checkstyle:VariableDeclarationUsageDistance",
-            "checkstyle:Indentation"
-        }
-    )
+    private record ArmRenderState(
+        float baseSwingAngle,
+        float upperArmAngle,
+        float forearmAngle,
+        float clawAngle,
+        float animationProgress,
+        boolean animationPlaying
+    ) {
+    }
+
     @Override
     public void render(
         SmartBlockPlacerBlockEntity entity,
@@ -230,8 +254,9 @@ public class SmartBlockPlacerRenderer implements BlockEntityRenderer<SmartBlockP
         BlockState state = entity.getBlockState();
         if (!(state.getBlock() instanceof SmartBlockPlacerBlock)) return;
         
-        Direction facing = state.getValue(HorizontalDirectionalBlock.FACING);
-        boolean upsideDown = state.getValue(SmartBlockPlacerBlock.UPSIDE_DOWN);
+        final Direction facing = state.getValue(HorizontalDirectionalBlock.FACING);
+        final boolean upsideDown = state.getValue(SmartBlockPlacerBlock.UPSIDE_DOWN);
+        final @Nullable Level level = entity.getLevel();
         
         // 应用变换
         poseStack.pushPose();
@@ -255,14 +280,13 @@ public class SmartBlockPlacerRenderer implements BlockEntityRenderer<SmartBlockP
         // 检测是否需要开始收回动画
         boolean wasWorkingLastFrame = entity.getClientAnimationStartTime() != 0;
         boolean shouldStartRetract = wasWorkingLastFrame && !isWorking && !entity.isClientIsRetracting();
-        net.minecraft.world.level.Level retractLevel = entity.getLevel();
-        if (shouldStartRetract && retractLevel != null) {
+        if (shouldStartRetract && level != null) {
             long animStartTime = entity.getClientAnimationStartTime();
             BlockPos animTargetPos = entity.getClientLastTargetPos();
             
-            if (animStartTime != 0 && animTargetPos != null) {
+            if (animTargetPos != null) {
                 if (!entity.isRetractSoundPlayed()) {
-                    retractLevel.playLocalSound(
+                    level.playLocalSound(
                         entity.getBlockPos(),
                         ModSoundEvents.SMART_BLOCK_PLACER_RETRACT.get(),
                         SoundSource.BLOCKS,
@@ -272,9 +296,9 @@ public class SmartBlockPlacerRenderer implements BlockEntityRenderer<SmartBlockP
                     );
                 }
                 entity.setClientIsRetracting(true);
-                entity.setClientRetractStartTime(retractLevel.getGameTime());
+                entity.setClientRetractStartTime(level.getGameTime());
                 
-                long elapsedTicks = retractLevel.getGameTime() - animStartTime;
+                long elapsedTicks = level.getGameTime() - animStartTime;
                 float interruptProgress = Math.min(1.0f, (elapsedTicks + partialTick) / (float) WORKING_ANIMATION_SCHEME
                     .getAnimationDurationTicks());
                 float[] angles = WORKING_ANIMATION_SCHEME.calculateArmAngles(
@@ -290,9 +314,8 @@ public class SmartBlockPlacerRenderer implements BlockEntityRenderer<SmartBlockP
             entity.setClientIsRetracting(false);
         }
         
-        net.minecraft.world.level.Level retractAnimLevel = entity.getLevel();
-        if (entity.isClientIsRetracting() && retractAnimLevel != null) {
-            long currentTime = retractAnimLevel.getGameTime();
+        if (entity.isClientIsRetracting() && level != null) {
+            long currentTime = level.getGameTime();
             long elapsedRetractTicks = currentTime - entity.getClientRetractStartTime();
             
             float startProgress = entity.getClientRetractStartProgress();
@@ -321,8 +344,8 @@ public class SmartBlockPlacerRenderer implements BlockEntityRenderer<SmartBlockP
                     entity.setClientLastTargetPos(null);
                 }
             }
-        } else if (isWorking && retractAnimLevel != null) {
-            long currentTime = retractAnimLevel.getGameTime();
+        } else if (isWorking && level != null) {
+            long currentTime = level.getGameTime();
             long animStartTime = entity.getClientAnimationStartTime();
             BlockPos animTargetPos = entity.getClientLastTargetPos();
             
@@ -332,11 +355,11 @@ public class SmartBlockPlacerRenderer implements BlockEntityRenderer<SmartBlockP
                 boolean animationCompleted = elapsedTicks >= WORKING_ANIMATION_SCHEME.getAnimationDurationTicks() + 5;
                 
                 if (animationCompleted) {
-                    BlockPos targetPos = getNextTargetPosition(entity, facing, upsideDown);
+                    BlockPos targetPos = getNextTargetPosition(entity, level, facing, upsideDown);
                     if (targetPos == null || targetPos.equals(animTargetPos)) {
                         if (!entity.isClientIsRetracting()) {
                             if (!entity.isRetractSoundPlayed()) {
-                                entity.getLevel().playLocalSound(
+                                level.playLocalSound(
                                     entity.getBlockPos(),
                                     ModSoundEvents.SMART_BLOCK_PLACER_RETRACT.get(),
                                     SoundSource.BLOCKS,
@@ -358,25 +381,23 @@ public class SmartBlockPlacerRenderer implements BlockEntityRenderer<SmartBlockP
                             entity.setClientLastTargetPos(null);
                         }
                     } else {
-                        if (entity.getLevel() != null) {
-                            entity.getLevel().playLocalSound(
+                        level.playLocalSound(
+                            entity.getBlockPos(),
+                            ModSoundEvents.SMART_BLOCK_PLACER_EXTEND.get(),
+                            SoundSource.BLOCKS,
+                            0.4f,
+                            1.3f,
+                            false
+                        );
+                        if (level.random.nextFloat() < 0.6f) {
+                            level.playLocalSound(
                                 entity.getBlockPos(),
-                                ModSoundEvents.SMART_BLOCK_PLACER_EXTEND.get(),
+                                ModSoundEvents.SMART_BLOCK_PLACER_SHULKER_OPEN.get(),
                                 SoundSource.BLOCKS,
                                 0.4f,
-                                1.3f,
+                                1.5f,
                                 false
                             );
-                            if (entity.getLevel().random.nextFloat() < 0.6f) {
-                                entity.getLevel().playLocalSound(
-                                    entity.getBlockPos(),
-                                    ModSoundEvents.SMART_BLOCK_PLACER_SHULKER_OPEN.get(),
-                                    SoundSource.BLOCKS,
-                                    0.4f,
-                                    1.5f,
-                                    false
-                                );
-                            }
                         }
                         entity.setClientAnimationStartTime(currentTime);
                         entity.setClientLastTargetPos(targetPos);
@@ -388,9 +409,9 @@ public class SmartBlockPlacerRenderer implements BlockEntityRenderer<SmartBlockP
             }
             
             if (animStartTime == 0) {
-                BlockPos targetPos = getNextTargetPosition(entity, facing, upsideDown);
-                if (targetPos != null && entity.getLevel() != null) {
-                    entity.getLevel().playLocalSound(
+                BlockPos targetPos = getNextTargetPosition(entity, level, facing, upsideDown);
+                if (targetPos != null) {
+                    level.playLocalSound(
                         entity.getBlockPos(),
                         ModSoundEvents.SMART_BLOCK_PLACER_EXTEND.get(),
                         SoundSource.BLOCKS,
@@ -398,8 +419,8 @@ public class SmartBlockPlacerRenderer implements BlockEntityRenderer<SmartBlockP
                         1.3f,
                         false
                     );
-                    if (entity.getLevel().random.nextFloat() < 0.6f) {
-                        entity.getLevel().playLocalSound(
+                    if (level.random.nextFloat() < 0.6f) {
+                        level.playLocalSound(
                             entity.getBlockPos(),
                             ModSoundEvents.SMART_BLOCK_PLACER_SHULKER_OPEN.get(),
                             SoundSource.BLOCKS,
@@ -431,8 +452,8 @@ public class SmartBlockPlacerRenderer implements BlockEntityRenderer<SmartBlockP
                 }
 
                 // 进入阶段4（收回阶段）时播放收回音效
-                if (!entity.isRetractSoundPlayed() && animationProgress >= 0.7f && entity.getLevel() != null) {
-                    entity.getLevel().playLocalSound(
+                if (!entity.isRetractSoundPlayed() && animationProgress >= 0.7f) {
+                    level.playLocalSound(
                         entity.getBlockPos(),
                         ModSoundEvents.SMART_BLOCK_PLACER_RETRACT.get(),
                         SoundSource.BLOCKS,
@@ -453,48 +474,63 @@ public class SmartBlockPlacerRenderer implements BlockEntityRenderer<SmartBlockP
             }
         }
         
-        // 渲染底座
+        ArmRenderState armState = new ArmRenderState(
+            baseSwingAngle,
+            upperArmAngle,
+            forearmAngle,
+            clawAngle,
+            animationProgress,
+            isAnimationPlaying
+        );
+        renderArm(entity, level, poseStack, buffer, packedLight, packedOverlay, upsideDown, armState);
+        poseStack.popPose();
+    }
+
+    private void renderArm(
+        SmartBlockPlacerBlockEntity entity,
+        @Nullable Level level,
+        PoseStack poseStack,
+        MultiBufferSource buffer,
+        int packedLight,
+        int packedOverlay,
+        boolean upsideDown,
+        ArmRenderState state
+    ) {
         poseStack.pushPose();
-        poseStack.mulPose((upsideDown ? Axis.YN : Axis.YP).rotationDegrees(baseSwingAngle));
+        poseStack.mulPose((upsideDown ? Axis.YN : Axis.YP).rotationDegrees(state.baseSwingAngle()));
         poseStack.translate(-0.5, 0.0, -0.5);
         renderModel(poseStack, buffer, BASE_MODEL, packedLight, packedOverlay);
         poseStack.popPose();
-        
-        // 渲染大臂
+
         poseStack.pushPose();
-        poseStack.mulPose((upsideDown ? Axis.YN : Axis.YP).rotationDegrees(baseSwingAngle));
+        poseStack.mulPose((upsideDown ? Axis.YN : Axis.YP).rotationDegrees(state.baseSwingAngle()));
         poseStack.translate(0, 0.625, 0);
-        poseStack.mulPose(Axis.XP.rotationDegrees(upperArmAngle));
+        poseStack.mulPose(Axis.XP.rotationDegrees(state.upperArmAngle()));
         poseStack.translate(0, -0.625, 0);
         poseStack.translate(-0.5, 0.0, -0.5);
         renderModel(poseStack, buffer, UPPERARM_MODEL, packedLight, packedOverlay);
-        
-        // 渲染小臂和钳子
+
         poseStack.pushPose();
         poseStack.translate(0.6875, 1.0625, 0.9375);
-        poseStack.mulPose(Axis.XP.rotationDegrees(forearmAngle));
+        poseStack.mulPose(Axis.XP.rotationDegrees(state.forearmAngle()));
         poseStack.translate(-0.6875, -1.0625, -0.9375);
         renderModel(poseStack, buffer, FOREARM_MODEL, packedLight, packedOverlay);
+
         poseStack.pushPose();
         poseStack.translate(0.5, 1.3125, 0.375);
-        poseStack.mulPose(Axis.XP.rotationDegrees(clawAngle));
+        poseStack.mulPose(Axis.XP.rotationDegrees(state.clawAngle()));
         poseStack.translate(-0.5, -1.3125, -0.375);
-        
-        // 切换钳子模型
-        // 全新逻辑：钳子只在动画的伸出阶段（0-70%）打开，收回阶段（70-100%）闭合
-        boolean shouldClawBeOpen = isAnimationPlaying && animationProgress > 0f && animationProgress <= 0.7f;
 
-        // 正在播放工作动画且处于伸出阶段（0-70%）：钳子打开
-
+        boolean shouldClawBeOpen = state.animationPlaying()
+            && state.animationProgress() > 0f
+            && state.animationProgress() <= 0.7f;
         ModelResourceLocation currentClawModel = shouldClawBeOpen ? CLAW_OPEN_MODEL : CLAW_MODEL;
         renderModel(poseStack, buffer, currentClawModel, packedLight, packedOverlay);
-        
-        // 渲染钳子中的方块
-        if (shouldClawBeOpen && entity.getLevel() != null) {
-            renderHeldBlock(poseStack, buffer, entity, packedLight, packedOverlay);
+
+        if (shouldClawBeOpen && level != null) {
+            renderHeldContent(poseStack, buffer, entity.getCurrentHeldBlock(), level, packedLight, packedOverlay);
         }
-        
-        poseStack.popPose();
+
         poseStack.popPose();
         poseStack.popPose();
         poseStack.popPose();
@@ -514,26 +550,26 @@ public class SmartBlockPlacerRenderer implements BlockEntityRenderer<SmartBlockP
     }
     
     private boolean canBeStacked(BlockState state, @Nullable Block heldBlock) {
-        if (state.is(net.minecraft.world.level.block.Blocks.TURTLE_EGG)) {
-            if (state.getValue(net.minecraft.world.level.block.TurtleEggBlock.EGGS) < 4) {
+        if (state.is(Blocks.TURTLE_EGG)) {
+            if (state.getValue(TurtleEggBlock.EGGS) < 4) {
                 return heldBlock == null || state.is(heldBlock);
             }
             return false;
         }
-        if (state.is(net.minecraft.world.level.block.Blocks.SEA_PICKLE)) {
-            if (state.getValue(net.minecraft.world.level.block.SeaPickleBlock.PICKLES) < 4) {
+        if (state.is(Blocks.SEA_PICKLE)) {
+            if (state.getValue(SeaPickleBlock.PICKLES) < 4) {
                 return heldBlock == null || state.is(heldBlock);
             }
             return false;
         }
-        if (state.getBlock() instanceof net.minecraft.world.level.block.CandleBlock) {
-            if (state.getValue(net.minecraft.world.level.block.CandleBlock.CANDLES) < 4) {
+        if (state.getBlock() instanceof CandleBlock) {
+            if (state.getValue(CandleBlock.CANDLES) < 4) {
                 return heldBlock == null || state.is(heldBlock);
             }
             return false;
         }
-        if (state.is(net.minecraft.world.level.block.Blocks.PINK_PETALS)) {
-            if (state.getValue(net.minecraft.world.level.block.state.properties.BlockStateProperties.FLOWER_AMOUNT) < 4) {
+        if (state.is(Blocks.PINK_PETALS)) {
+            if (state.getValue(BlockStateProperties.FLOWER_AMOUNT) < 4) {
                 return heldBlock == null || state.is(heldBlock);
             }
             return false;
@@ -545,7 +581,9 @@ public class SmartBlockPlacerRenderer implements BlockEntityRenderer<SmartBlockP
      * 获取下一个放置目标位置
      */
     @Nullable
-    private BlockPos getNextTargetPosition(SmartBlockPlacerBlockEntity entity, Direction facing, boolean upsideDown) {
+    private BlockPos getNextTargetPosition(
+        SmartBlockPlacerBlockEntity entity, Level level, Direction facing, boolean upsideDown
+    ) {
         if (entity.hasBlueprint()) {
             return entity.getCurrentBlueprintTargetPosition();
         }
@@ -575,12 +613,7 @@ public class SmartBlockPlacerRenderer implements BlockEntityRenderer<SmartBlockP
         for (int i = 0; i < allPositions.size(); i++) {
             int index = (currentIndex + i) % allPositions.size();
             BlockPos targetPos = allPositions.get(index);
-            
-            if (entity.getLevel() == null) {
-                return null;
-            }
-            
-            net.minecraft.world.level.block.state.BlockState targetState = entity.getLevel().getBlockState(targetPos);
+            BlockState targetState = level.getBlockState(targetPos);
             
             if (targetState.isAir()) {
                 return targetPos;
@@ -601,15 +634,15 @@ public class SmartBlockPlacerRenderer implements BlockEntityRenderer<SmartBlockP
         return null;
     }
     
-    @SuppressWarnings({"checkstyle:EmptyLineSeparator", "deprecation"})
+    @SuppressWarnings("deprecation")
     private void renderModel(
         PoseStack poseStack, MultiBufferSource buffer, ModelResourceLocation model, int packedLight, int packedOverlay) {
         final VertexConsumer vertexConsumer = buffer.getBuffer(RenderType.cutout());
-        Minecraft.getInstance().getBlockRenderer().getModelRenderer().renderModel(
+        this.blockRenderer.getModelRenderer().renderModel(
             poseStack.last(),
             vertexConsumer,
             null,
-            Minecraft.getInstance().getModelManager().getModel(model),
+            this.modelManager.getModel(model),
             0,
             0,
             0,
@@ -618,9 +651,14 @@ public class SmartBlockPlacerRenderer implements BlockEntityRenderer<SmartBlockP
         );
     }
     
-    private void renderHeldBlock(
-        PoseStack poseStack, MultiBufferSource buffer, SmartBlockPlacerBlockEntity entity, int packedLight, int packedOverlay) {
-        Either<ItemStack, BlockState> heldBlock = entity.getCurrentHeldBlock();
+    private void renderHeldContent(
+        PoseStack poseStack,
+        MultiBufferSource buffer,
+        @Nullable Either<ItemStack, BlockState> heldBlock,
+        Level level,
+        int packedLight,
+        int packedOverlay
+    ) {
         if (heldBlock == null) {
             return;
         }
@@ -631,30 +669,78 @@ public class SmartBlockPlacerRenderer implements BlockEntityRenderer<SmartBlockP
         poseStack.scale(0.65f, 0.65f, 0.65f);
         
         heldBlock
-            .ifLeft(stack -> Minecraft.getInstance().getItemRenderer().renderStatic(
-                stack,
-                net.minecraft.world.item.ItemDisplayContext.THIRD_PERSON_RIGHT_HAND,
-                packedLight,
-                packedOverlay,
-                poseStack,
-                buffer,
-                entity.getLevel(),
-                0
-            ))
-            .ifRight(state -> {
-                poseStack.translate(-0.5F, -0.5F, -0.5F);
-                Minecraft.getInstance().getBlockRenderer().renderSingleBlock(
-                    state,
-                    poseStack,
-                    buffer,
-                    packedLight,
-                    packedOverlay,
-                    ModelData.EMPTY,
-                    null
-                );
-            });
+            .ifLeft(stack -> this.renderHeldItem(stack, poseStack, buffer, level, packedLight, packedOverlay))
+            .ifRight(state -> this.renderHeldBlockState(state, poseStack, buffer, packedLight, packedOverlay));
         
         poseStack.popPose();
+    }
+
+    private void renderHeldItem(
+        ItemStack stack,
+        PoseStack poseStack,
+        MultiBufferSource buffer,
+        Level level,
+        int packedLight,
+        int packedOverlay
+    ) {
+        this.itemRenderer.renderStatic(
+            stack,
+            HELD_ITEM_CONTEXT,
+            packedLight,
+            packedOverlay,
+            poseStack,
+            buffer,
+            level,
+            0
+        );
+    }
+
+    private void renderHeldBlockState(
+        BlockState state, PoseStack poseStack, MultiBufferSource buffer, int packedLight, int packedOverlay
+    ) {
+        BakedModel model = this.blockRenderer.getBlockModel(state)
+            .applyTransform(HELD_ITEM_CONTEXT, poseStack, false);
+        poseStack.translate(-0.5F, -0.5F, -0.5F);
+
+        if (state.getRenderShape() != RenderShape.MODEL) {
+            this.blockRenderer.renderSingleBlock(
+                state,
+                poseStack,
+                buffer,
+                packedLight,
+                packedOverlay,
+                ModelData.EMPTY,
+                RenderType.cutout()
+            );
+            return;
+        }
+
+        int color = this.blockColors.getColor(state, null, null, 0);
+        float red = (float) (color >> 16 & 0xFF) / 255.0F;
+        float green = (float) (color >> 8 & 0xFF) / 255.0F;
+        float blue = (float) (color & 0xFF) / 255.0F;
+        ModelData modelData = ModelData.EMPTY;
+        boolean cull = !(state.getBlock() instanceof HalfTransparentBlock)
+            && !(state.getBlock() instanceof StainedGlassPaneBlock);
+
+        for (RenderType blockRenderType : model.getRenderTypes(state, RandomSource.create(42L), modelData)) {
+            VertexConsumer vertexConsumer = buffer.getBuffer(
+                RenderTypeHelper.getEntityRenderType(blockRenderType, cull)
+            );
+            this.blockRenderer.getModelRenderer().renderModel(
+                poseStack.last(),
+                vertexConsumer,
+                state,
+                model,
+                red,
+                green,
+                blue,
+                packedLight,
+                packedOverlay,
+                modelData,
+                blockRenderType
+            );
+        }
     }
 
     private static @Nullable Block getDisplayedBlock(@Nullable Either<ItemStack, BlockState> displayedBlock) {
